objects/Log__c.object
<CustomObject>
    <description>This is the log entity that stores information about system errors that may be encountered while the system is running.</description>
    <fields>
        <fullName>ExceptionLine__c</fullName>
        <description>This contains the details of the log or information to be written to the log object</description>
        <label>ExceptionLine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <description>This is the exception code from the thrown excpetion</description>
        <label>ExceptionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limits__c</fullName>
        <description>This field details where the code was in regards to list of governor limits</description>
        <label>Limits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Log Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>This is the developer provided string in the debug or exception entry</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>This is an number field to give a unique number to each entry</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <description>This details the order of method invocation which occurred at the point the debug entry was written</description>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>ExceptionType__c</columns>
        <columns>Log_Created_Date_Time__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MW_integration_logs</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ExceptionType__c</columns>
        <columns>Log_Created_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Eloq</value>
        </filters>
        <label>MW integration logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <recordTypes>
        <fullName>Debug</fullName>
        <active>true</active>
        <label>Debug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exception</fullName>
        <active>true</active>
        <label>Exception</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>